--- a/WooEngineCore/WooEngineCore.vcxproj.filters
+++ b/WooEngineCore/WooEngineCore.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="WooSource\Input">
       <UniqueIdentifier>{cdcd0ca4-ff73-4689-82d8-d14e7c8dfbc3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="WooSource\Math">
+      <UniqueIdentifier>{90a8aa8e-e641-4ea8-acea-338dd0e89905}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -30,10 +33,16 @@
     <ClCompile Include="Window.cpp">
       <Filter>WooSource\Graphics</Filter>
     </ClCompile>
+    <ClCompile Include="Vector.cpp">
+      <Filter>WooSource\Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
       <Filter>WooSource\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Vector.h">
+      <Filter>WooSource\Math</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
