--- a/WooEngineCore/WooEngineCore.vcxproj.filters
+++ b/WooEngineCore/WooEngineCore.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClCompile Include="Vector.cpp">
       <Filter>WooSource\Math</Filter>
     </ClCompile>
-    <ClCompile Include="Matrice4.cpp">
+    <ClCompile Include="Matrice.cpp">
       <Filter>WooSource\Math</Filter>
     </ClCompile>
   </ItemGroup>
@@ -47,10 +47,13 @@
     <ClInclude Include="Vector.h">
       <Filter>WooSource\Math</Filter>
     </ClInclude>
-    <ClInclude Include="Matrice4.h">
+    <ClInclude Include="MathWoo.h">
       <Filter>WooSource\Math</Filter>
     </ClInclude>
-    <ClInclude Include="MathW.h">
+    <ClInclude Include="Math.h">
+      <Filter>WooSource\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Matrice.h">
       <Filter>WooSource\Math</Filter>
     </ClInclude>
   </ItemGroup>
