--- a/WooEngineCore/WooEngineCore.vcxproj.filters
+++ b/WooEngineCore/WooEngineCore.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="BasicRenderer.cpp">
       <Filter>WooSource\Graphics</Filter>
     </ClCompile>
+    <ClCompile Include="BatchRenderer.cpp">
+      <Filter>WooSource\Graphics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
@@ -108,6 +111,9 @@
       <Filter>WooSource\Graphics</Filter>
     </ClInclude>
     <ClInclude Include="BasicRenderer.h">
+      <Filter>WooSource\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="BatchRenderer.h">
       <Filter>WooSource\Graphics</Filter>
     </ClInclude>
   </ItemGroup>
