--- a/WooEngineCore/WooEngineCore.vcxproj
+++ b/WooEngineCore/WooEngineCore.vcxproj
@@ -146,12 +146,14 @@
     <ClCompile Include="Buffer.cpp" />
     <ClCompile Include="FileUtility.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
+    <ClCompile Include="Layer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Matrice.cpp" />
     <ClCompile Include="Renderable.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="StaticSprite.cpp" />
+    <ClCompile Include="TileLayer.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Vector.cpp" />
     <ClCompile Include="VertexArray.cpp" />
@@ -160,6 +162,7 @@
   <ItemGroup>
     <ClInclude Include="BasicRenderer.h" />
     <ClInclude Include="BatchRenderer.h" />
+    <ClInclude Include="Layer.h" />
     <ClInclude Include="Renderable.h" />
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="FileUtility.h" />
@@ -171,6 +174,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="StaticSprite.h" />
+    <ClInclude Include="TileLayer.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="VertexArray.h" />
