--- a/WooEngineCore/WooEngineCore.vcxproj
+++ b/WooEngineCore/WooEngineCore.vcxproj
@@ -92,7 +92,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;legacy_stdio_definitions.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>FreeImage.lib;glfw3.lib;glew32s.lib;opengl32.lib;legacy_stdio_definitions.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -141,51 +141,55 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BasicRenderer.cpp" />
-    <ClCompile Include="BatchRenderer.cpp" />
-    <ClCompile Include="Buffer.cpp" />
-    <ClCompile Include="FileUtility.cpp" />
-    <ClCompile Include="IndexBuffer.cpp" />
-    <ClCompile Include="Layer.cpp" />
+    <ClCompile Include="Graphics\Renderers\BasicRenderer.cpp" />
+    <ClCompile Include="Graphics\Renderers\BatchRenderer.cpp" />
+    <ClCompile Include="Graphics\Buffers\Buffer.cpp" />
+    <ClCompile Include="Utility\FileUtility.cpp" />
+    <ClCompile Include="Utility\ImageUtility.cpp" />
+    <ClCompile Include="Graphics\Buffers\IndexBuffer.cpp" />
+    <ClCompile Include="Graphics\Layers\Layer.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Matrice.cpp" />
-    <ClCompile Include="ParentRenderable.cpp" />
-    <ClCompile Include="Renderable.cpp" />
-    <ClCompile Include="Renderer.cpp" />
-    <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="Sprite.cpp" />
-    <ClCompile Include="StaticSprite.cpp" />
-    <ClCompile Include="TileLayer.cpp" />
-    <ClCompile Include="Timer.cpp" />
-    <ClCompile Include="Vector.cpp" />
-    <ClCompile Include="VertexArray.cpp" />
-    <ClCompile Include="Window.cpp" />
+    <ClCompile Include="Math\Matrice.cpp" />
+    <ClCompile Include="Graphics\Renderables\ParentRenderable.cpp" />
+    <ClCompile Include="Graphics\Renderables\Renderable.cpp" />
+    <ClCompile Include="Graphics\Renderers\Renderer.cpp" />
+    <ClCompile Include="Graphics\Shaders\Shader.cpp" />
+    <ClCompile Include="Graphics\Renderables\Sprite.cpp" />
+    <ClCompile Include="Graphics\Renderables\StaticSprite.cpp" />
+    <ClCompile Include="Graphics\Shaders\Texture.cpp" />
+    <ClCompile Include="Graphics\Layers\TileLayer.cpp" />
+    <ClCompile Include="Utility\Timer.cpp" />
+    <ClCompile Include="Math\Vector.cpp" />
+    <ClCompile Include="Graphics\Buffers\VertexArray.cpp" />
+    <ClCompile Include="Graphics\Window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BasicRenderer.h" />
-    <ClInclude Include="BatchRenderer.h" />
-    <ClInclude Include="Layer.h" />
-    <ClInclude Include="ParentRenderable.h" />
-    <ClInclude Include="Renderable.h" />
-    <ClInclude Include="Buffer.h" />
-    <ClInclude Include="FileUtility.h" />
-    <ClInclude Include="IndexBuffer.h" />
-    <ClInclude Include="Math.h" />
-    <ClInclude Include="MathWoo.h" />
-    <ClInclude Include="Matrice.h" />
-    <ClInclude Include="Renderer.h" />
-    <ClInclude Include="Shader.h" />
-    <ClInclude Include="Sprite.h" />
-    <ClInclude Include="StaticSprite.h" />
-    <ClInclude Include="TileLayer.h" />
-    <ClInclude Include="Timer.h" />
-    <ClInclude Include="Vector.h" />
-    <ClInclude Include="VertexArray.h" />
-    <ClInclude Include="Window.h" />
+    <ClInclude Include="Graphics\Renderers\BasicRenderer.h" />
+    <ClInclude Include="Graphics\Renderers\BatchRenderer.h" />
+    <ClInclude Include="Utility\ImageUtility.h" />
+    <ClInclude Include="Graphics\Layers\Layer.h" />
+    <ClInclude Include="Graphics\Renderables\ParentRenderable.h" />
+    <ClInclude Include="Graphics\Renderables\Renderable.h" />
+    <ClInclude Include="Graphics\Buffers\Buffer.h" />
+    <ClInclude Include="Utility\FileUtility.h" />
+    <ClInclude Include="Graphics\Buffers\IndexBuffer.h" />
+    <ClInclude Include="Math\Math.h" />
+    <ClInclude Include="Math\MathWoo.h" />
+    <ClInclude Include="Math\Matrice.h" />
+    <ClInclude Include="Graphics\Renderers\Renderer.h" />
+    <ClInclude Include="Graphics\Shaders\Shader.h" />
+    <ClInclude Include="Graphics\Renderables\Sprite.h" />
+    <ClInclude Include="Graphics\Renderables\StaticSprite.h" />
+    <ClInclude Include="Graphics\Shaders\Texture.h" />
+    <ClInclude Include="Graphics\Layers\TileLayer.h" />
+    <ClInclude Include="Utility\Timer.h" />
+    <ClInclude Include="Math\Vector.h" />
+    <ClInclude Include="Graphics\Buffers\VertexArray.h" />
+    <ClInclude Include="Graphics\Window\Window.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Simple.frag" />
-    <None Include="Simple.vert" />
+    <None Include="SampleShaders\Simple.frag" />
+    <None Include="SampleShaders\Simple.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
